2000-10-03  Ezra Peisach  <epeisach@mit.edu>

	* krlogin.c (main): Declare main as int.

2000-09-08  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in (DEFINES): Define HEIMDAL_FRIENDLY.
	* krlogind.c (recvauth): Don't complain about a subkey sent for
	KCMDV0.1 if HEIMDAL_FRIENDLY is defined, just quietly ignore it.
	* krshd.c (recvauth): Likewise.

Tue Aug  8 13:38:22 2000  Ezra Peisach  <epeisach@mit.edu>

	* krlogin.c (read_wrapper): Copy from the current point and not
 	the start of the cached buffer.

2000-07-21  Peter S Litwack  <plitwack@mit.edu>

	* krlogin.c (writer): Improved bandwith efficiency by reading 
        and sending more than one character at a time if multiple 
        characters are available to be read from the terminal.
        * krlogin.c (read_wrapper): Added this function as a helper
        to writer.  It facilitates checking for escape sequences 
        (~^Z etc.) when reading mulitple characters at a time.

2000-07-18  Ezra Peisach  <epeisach@mit.edu>

	* krcp.c: Provide format attribute for error() for versions of gcc
	that support it.

	* configure.in (LOGINLIBS): Test for crypt() in crypt library only
	modifies LOGINLIBS.

2000-07-03  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in: Remove linking of krb5util library from
	applications that never use it.

2000-06-29  Ken Raeburn  <raeburn@mit.edu>

	Patch from Donn Cave and Leonard Peirce from 1.1 release cycle:
	* login.c (k_init): Call krb5_cc_set_default_name right after
	setting the environment variable.
	(main): Likewise.

2000-06-23  Ken Raeburn  <raeburn@mit.edu>

	* rcp.M, rsh.M, rlogin.M: Add description of new -PO, -PN
	options.

2000-06-19  Tom Yu  <tlyu@mit.edu>

	* krshd.c (recvauth): Call krb5_recvauth_version() rather than
	calling krb5_recvauth() with arguments intended for
	krb5_recvauth_version().

	* kcmd.c: Conditionalize krb_sendauth prototype based on sense of
	KRB5_KRB4_COMPAT.

2000-06-15  Tom Yu  <tlyu@mit.edu>
